--- a/app/catalog/view/theme/fancy.shop/sass/common/btn-cat/btn-cat.sass
+++ b/app/catalog/view/theme/fancy.shop/sass/common/btn-cat/btn-cat.sass
@@ -16,6 +16,7 @@
   outline: none
   overflow: hidden
   transition: .2s
+  z-index: 99999
   &__icon
     width: 24px
     height: 34px
@@ -63,10 +64,19 @@
     padding: 0
     justify-content: center
     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.25)
-    i
-      font-size: 20px
+    &__icon
+      width: 18px
+      height: 28px
+      &:before
+        font-size: 18px
+        line-height: 28px
+      i
+        width: 18px
+        font-size: 20px
+        line-height: 28px
     span
       display: none
+
   &--active
     background: darken($main, 8%)
     box-shadow: inset -3px 8px 12px 0px #0000001f
