--- a/app/catalog/view/theme/fancy.shop/sass/common/header/header.sass
+++ b/app/catalog/view/theme/fancy.shop/sass/common/header/header.sass
@@ -1,11 +1,23 @@
 .header
   height: 60px
   position: relative
+  &:after
+    width: 100%
+    height: 100%
+    content: ""
+    display: block
+    top: 0
+    left: 0
+    position: absolute
+    z-index: 9999
+    background: #FFF
   &:before
     width: 100%
     height: 100%
     content: ""
     display: block
+    top: 0
+    left: 0
     position: absolute
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25)
     z-index: 99
@@ -30,6 +42,7 @@
   &__logo
     display: flex
     align-items: center
+    z-index: 99999
     @media (max-width: 1099px)
       margin: 0 auto 0 20px
       order: 2
@@ -56,6 +69,7 @@
     display: flex
     align-items: center
     cursor: pointer
+    z-index: 99999
     &:hover
       .arrow
         animation: phone-anim ease-in-out .3s
@@ -94,8 +108,10 @@
   &__search
     width: 40%
     display: flex
+    z-index: 99999
     &--mobile
       display: none
+      z-index: 99
     @media (max-width: 1099px)
       display: none
       &--mobile
@@ -130,6 +146,7 @@
     min-width: 200px
     display: flex
     justify-content: space-between
+    z-index: 99999
     @media (max-width: 1099px)
       min-width: auto
       order: 4
