--- a/app/catalog/view/theme/fancy.shop/sass/common/header/header__cat.sass
+++ b/app/catalog/view/theme/fancy.shop/sass/common/header/header__cat.sass
@@ -5,45 +5,55 @@
   left: 0
   position: absolute
   background: #FFF
+  box-shadow: 0px 6px 60px rgba(0, 0, 0, 0.12)
   border-top: 1px solid #f1f1f1
   opacity: 1
   z-index: 999
-  &:after
-    width: 100%
-    height: calc(100% - 60px)
-    content: ""
-    display: block
-    left: 0
-    top: 0
-    background: #FFF
-    position: absolute
-    z-index: 99
-    pointer-events: none
-  &:before
-    width: 100%
-    height: calc(100% - 60px)
-    content: ""
-    display: block
-    left: 0
-    bottom: 0
-    box-shadow: 0px 6px 60px rgba(0, 0, 0, 0.12)
-    position: absolute
-    z-index: 99
-    pointer-events: none
-  @media (max-width: 1399px)
-    width: 100%
-    padding: 0 20px
+  @media (max-width: 899px)
+    box-shadow: 0 6px 60px rgba(0, 0, 0, 0.4)
+  @media (max-width: 599px)
+    top: 48px
+
+  &-slider
+    overflow: unset !important
+    .swiper-slide
+      width: auto !important
+      height: auto !important
+      @media (max-width: 599px)
+        width: 30% !important
+
+    &:before
+      width: calc(100% + 1000px)
+      height: 100%
+      content: ""
+      display: block
+      right: 0
+      top: 0
+      background: #F7F7F7
+      position: absolute
+      pointer-events: none
+  @media (max-width: 599px)
+    overflow: hidden !important
 
   &__cont
     width: 1180px
     margin: auto
     position: relative
     display: flex
+    box-sizing: border-box
     z-index: 9999
+    @media (max-width: 1399px)
+      width: 100%
+      padding: 0 20px
+    @media (max-width: 599px)
+      padding: 0
+      flex-direction: column
 
   &-list
     width: 290px
     margin: 0
+    display: flex
+    flex-direction: column
     padding: 10px 0 40px 0
     position: relative
     list-style: none
@@ -59,28 +69,55 @@
       position: absolute
       z-index: 99
       pointer-events: none
+    @media (max-width: 899px)
+      width: 142px
+    @media (max-width: 599px)
+      width: 100%
+      padding: 10px 16px
+      flex-direction: row
+      background: #F7F7F7
+      overflow-y: hidden
+      overflow-x: scroll
+
     &__item
       position: relative
       list-style: none
       z-index: 999
+
     &__link
       width: 100%
-      height: 100%
       min-width: 240px
       display: inline-block
       padding: 12px 16px
       color: #000
       font-size: 16px
       text-decoration: none
-      border-top-left-radius: 22px
-      border-bottom-left-radius: 22px
+      border-top-left-radius: 40px
+      border-bottom-left-radius: 40px
       box-sizing: border-box
       transition: 0.1s
       &:hover, &:focus, &:active
         color: lighten(#000, 40%)
+      @media (max-width: 899px)
+        min-width: auto
+        padding: 10px 12px
+        font-size: 14px
+        text-align: center
+      @media (max-width: 599px)
+        height: 100%
+        min-width: 150px
+        padding: 6px 10px
+        display: flex
+        align-items: center
+        justify-content: center
+        font-family: "CeraRoundPro-bold"
+        border-radius: 40px
+
     .active
       color: $main
       background: #FFF
+      @media (max-width: 599px)
+        box-shadow: 2px 5px 6px #00000003
     &-full
       width: 100%
       height: 100%
@@ -105,18 +142,48 @@
       &--active
         &:before
           opacity: 0
-      .cat
-        height: 100%
+      @media (max-width: 599px)
+        padding: 0 16px 20px 16px
+        box-sizing: border-box
+
+      h1
+        display: none
+
+      #content
         display: flex
         justify-content: space-between
+        @media (max-width: 1099px)
+          padding: 20px 30px
+          flex-direction: column
+        @media (max-width: 899px)
+          padding: 30px 20px 0
+        @media (max-width: 599px)
+          padding: 0
+
+      .cat
+        height: 100%
         position: relative
         background: #FFF
+        box-sizing: border-box
         z-index: 99
+        order: 1
 
         &__cont
           width: 680px
           padding: 30px 40px 0
           column-count: 4
+          box-sizing: border-box
+          @media (max-width: 1099px)
+            width: 100%
+            padding: 0
+          @media (max-width: 899px)
+            column-count: 3
+          @media (max-width: 599px)
+            margin: 20px 0 0 0
+            display: grid
+            grid-gap: 20px
+            grid-template-columns: 1fr 1fr
+            column-count: 1
 
         &-list
           width: 100%
@@ -127,21 +194,39 @@
             list-style: none
             page-break-inside: avoid
             break-inside: avoid
+            @media (max-width: 599px)
+              margin: 0 0 20px 0
+              &:last-of-type
+                margin: 0
           &__img
             width: 60px
             height: 60px
             transition: .2s
+            @media (max-width: 899px)
+              width: 100%
+              height: 100%
+              max-width: 100px
+              max-height: 100px
+              display: block
+              margin: auto
+
           &__link
             display: flex
             flex-direction: column
             padding: 4px 0
             text-decoration: none
+            @media (max-width: 599px)
+              padding: 20px 0
+              border-radius: 10px
+              box-shadow: 0 0 16px #0000000f
             span
               margin: 10px 0 0 0
               color: #000
-              font-size: 16px
               font-family: "CeraRoundPro-bold"
               transition: .2s
+              @media (max-width: 899px)
+                text-align: center
+
             &:hover, &:focus
               img
                 transform: scale(1.05)
@@ -150,14 +235,29 @@
 
         &-brands
           padding: 30px 0
+          order: 2
+          @media (max-width: 1099px)
+            margin: 20px 0 0 0
+            padding: 0
+          @media (max-width: 899px)
+            display: none
+
           &-list
             max-width: 156px
             margin: 0
             padding: 0
+            @media (max-width: 1099px)
+              max-width: 100%
+
             &__item
               margin: 0 0 30px 0
               list-style: none
-            &__link
+              @media (max-width: 1099px)
+                display: inline-block
+                margin: 0 40px 0 0
+                &:last-of-type
+                  margin: 0
+            a
               width: auto
               height: 40px
               display: flex
@@ -170,7 +270,8 @@
               img
                 height: 100%
                 opacity: 1
-                transition: .2s=
+                transition: .2s
+
 .hidden
   display: none
   top: 80px
